# DYN_SPORB_SLAM

./: CMakeLists.txt
Examples/Monocular/: KeyFrameTrajectory.txt  mono_euroc
include/: YoloDetection.h
include/Extractors/: SPextractor(torchscript).h  SPextractor.h
onnxmodel/: export_yolov8_onnx.py
src/: Frame.cc  YoloDetection.cpp
src/Extractors/: SPextractor(torchscript).cc  SPextractor.cc
